test/code/test_namespace_class_error.out

Parse error: syntax error, unexpected '\' (T_NS_SEPARATOR), expecting '{' in {{CWD}}/test/code/test_namespace_class_error.php on line 4
