test/code/test_namespace_class_error.php
<?php
namespace my\name;

class SubNS\MyClass {}
